// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header> renders correctly 1`] = `
<h1
  className="sc-bdVaJa kGlwYW"
>
  Header
</h1>
`;

exports[`<Header> renders correctly as 'h3' tag 1`] = `
<h3
  className="sc-bdVaJa kGlwYW"
>
  Header
</h3>
`;
